try to fix image height on contact page on iphone

--- a/src/views/Contact.css
+++ b/src/views/Contact.css
@@ -56,7 +56,8 @@
 
     #image-wrapper {
         width: 100%;
-        height: auto;
+        height: 100%;
+        object-fit: cover;
         display: flex;
         justify-content: center;
     }
